--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,20 @@ header h1 {
     position: absolute;
     top: 20px;
     right: 20px;
-    object-fit: cover;
+    object-fit: contain;
+    background-color: white;
+    padding: 2px;
+}
+
+/* 添加响应式样式 */
+@media screen and (max-width: 768px) {
+    .profile-image {
+        position: static;
+        margin: 0 auto 20px;
+        display: block;
+        width: 120px;
+        height: 120px;
+    }
 }
 
 /* 章节样式 */
