--- a/css/main.css
+++ b/css/main.css
@@ -54,16 +54,15 @@ header h1 {
 
 /* 头像样式 */
 .profile-image {
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     border: 4px solid white;
     position: absolute;
     top: 20px;
     right: 20px;
-    object-fit: contain;
-    background-color: white;
-    padding: 2px;
+    object-fit: cover;
+    object-position: 0 25%;
 }
 
 /* 添加响应式样式 */
@@ -72,8 +71,8 @@ header h1 {
         position: static;
         margin: 0 auto 20px;
         display: block;
-        width: 120px;
-        height: 120px;
+        width: 180px;
+        height: 180px;
     }
 }
 
